# HikingTrailMatcher

./: .gitignore  .pre-commit-config.yaml  README.md  RUNLOG.md  app.py  app_osmchange.py  config.py  config.sample.py  development-requirements.txt  env.example  justfile  pyproject.toml  requirements.txt
.github/workflows/: lint_python.yml
output/: osmchange-2026-07-22-mismatches.csv  osmchange-2026-07-22.osc
src/: enrich_hiking_trails.py  enums.py  exceptions.py  osm_wikidata_link_return.py  project_base_model.py  questionary_return.py  subroute.py  trail_item.py  waymarked_result.py  wikidata_time_format.py
src/models/: enrich_hiking_trails.py  generate_osmchange.py  osm_wikidata_link_result.py  project_base_model.py  questionary_return.py  subroute.py  trail_item.py  waymarked_result.py  wikidata_time_format.py
tests/: test_enrich_hiking_trails.py  test_generate_osmchange.py  test_trail_item.py  test_waymarked_result.py  test_wikidata_time_format.py
